--- a/index.html
+++ b/index.html
@@ -46,10 +46,10 @@
               <div class="row">
                   <div class="col-md-6 d-flex flex-column justify-content-center">
                       <h3 class="text-warning">Software Developer</h3>
-                      <h1 class="display-1 fw-bold">I'm Ciara <br> Brown</h1>
+                      <h1 class="display-1 fw-bold">Welcome  <br> I'm Ciara Brown</h1>
                       <div class="buttons mt-4">
-                          <button class="btn btn-outline-warning px-4 py-2">Hire me</button>
-                          <button class="btn btn-warning text-white px-4 py-2">About</button>
+                         <!-- <button class="btn btn-outline-warning px-4 py-2">Hire me</button>
+                          <button class="btn btn-warning text-white px-4 py-2">About</button> -->
                       </div>
                   </div>
                   <div class="col-md-6">
