--- a/index.html
+++ b/index.html
@@ -96,10 +96,10 @@
                       <h1 class="fw-bold">CIARA BROWN</h1>
                       <h3 class="text-warning">SOFTWARE DEVELOPER</h3>
                       <p class="lead mb-4">We  all have a moment in our life where we get an ah-ha moment, and that moment for me was in 2020. At that point I had been in the medical laboratory field for 10+ years and I began to have a strong desire to dive into a new field, specifically a field in tech. Growing up my family had a computer in our household, that my siblings and I used mostly for video games, and it wasn't until the Myspace days that I began to recognize code and the importance that it held. Fast-forward and throughout my career, technology was still a part of my life, but from a user standpoint. I started to become curious about the backend of technology so I decided to take a leap of faith, quit my comfortable job at a big pharmaceutical company here in Indianapolis, and dove right into learning software development with Eleven Fifty Academy. I am truly excited about this career feild and I have a feeling that this is going to be an interesting journey.</p>
-                      <div class="buttons">
+                      <!--<div class="buttons">
                          <button class="btn btn-outline-warning px-5 py-2">Download CV</button> 
                          <button class="btn btn-warning text-white px-5 py-2">Contact</button>
-                      </div>
+                      </div> -->
                   </div>
               </div>
           </div>
@@ -142,10 +142,10 @@
                       <p>Receive, build manifest, process, and store samples in correct temperature environment.</p>
                       <p>Use Excel and Word programs daily.</p>
                       <p>Maintain compliance with TSA, FDA, CAp, OSHA, and NRC regulatory agencies</p>
-                      <div class="buttons">
+                      <!--<div class="buttons">
                         <button class="btn btn-outline-warning px-5 py-2">Download Resume</button> 
                         <button class="btn btn-warning text-white px-5 py-2">Contact</button>
-                     </div>
+                     </div> -->
                   </div>
               </div>
           </div>
